; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_gpio_v2.c_mtk_gpio_pin_setflags.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_gpio_v2.c_mtk_gpio_pin_setflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_gpio_softc = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@GPIO_PIN_INPUT = common dso_local global i64 0, align 8
@GPIO_PIN_OUTPUT = common dso_local global i64 0, align 8
@GPIO_PIN_INVIN = common dso_local global i64 0, align 8
@GPIO_PIN_INVOUT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i64)* @mtk_gpio_pin_setflags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_gpio_pin_setflags(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.mtk_gpio_softc*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.mtk_gpio_softc* @device_get_softc(i32 %10)
  store %struct.mtk_gpio_softc* %11, %struct.mtk_gpio_softc** %8, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %8, align 8
  %14 = getelementptr inbounds %struct.mtk_gpio_softc, %struct.mtk_gpio_softc* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sge i64 %12, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @EINVAL, align 4
  store i32 %18, i32* %4, align 4
  br label %45

19:                                               ; preds = %3
  %20 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %8, align 8
  %21 = call i32 @MTK_GPIO_LOCK(%struct.mtk_gpio_softc* %20)
  %22 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %8, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* @GPIO_PIN_INPUT, align 8
  %26 = load i64, i64* @GPIO_PIN_OUTPUT, align 8
  %27 = or i64 %25, %26
  %28 = and i64 %24, %27
  %29 = call i32 @mtk_gpio_pin_set_direction(%struct.mtk_gpio_softc* %22, i64 %23, i64 %28)
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %41

32:                                               ; preds = %19
  %33 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %8, align 8
  %34 = load i64, i64* %6, align 8
  %35 = load i64, i64* %7, align 8
  %36 = load i64, i64* @GPIO_PIN_INVIN, align 8
  %37 = load i64, i64* @GPIO_PIN_INVOUT, align 8
  %38 = or i64 %36, %37
  %39 = and i64 %35, %38
  %40 = call i32 @mtk_gpio_pin_set_invert(%struct.mtk_gpio_softc* %33, i64 %34, i64 %39)
  store i32 %40, i32* %9, align 4
  br label %41

41:                                               ; preds = %32, %19
  %42 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %8, align 8
  %43 = call i32 @MTK_GPIO_UNLOCK(%struct.mtk_gpio_softc* %42)
  %44 = load i32, i32* %9, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %41, %17
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local %struct.mtk_gpio_softc* @device_get_softc(i32) #1

declare dso_local i32 @MTK_GPIO_LOCK(%struct.mtk_gpio_softc*) #1

declare dso_local i32 @mtk_gpio_pin_set_direction(%struct.mtk_gpio_softc*, i64, i64) #1

declare dso_local i32 @mtk_gpio_pin_set_invert(%struct.mtk_gpio_softc*, i64, i64) #1

declare dso_local i32 @MTK_GPIO_UNLOCK(%struct.mtk_gpio_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
